--- a/client/src/main/resources/components/button.less
+++ b/client/src/main/resources/components/button.less
@@ -13,3 +13,9 @@
         -fx-background-color: @dark-grey;
     }
 }
+
+.white-button {
+    .button();
+    -fx-background-color: @white;
+    -fx-padding: 10;
+}
