--- a/client/src/main/resources/styles.less
+++ b/client/src/main/resources/styles.less
@@ -1,5 +1,6 @@
 @import './components/button.less';
 @import './components/header.less';
+@import './components/label.less';
 
 .root {
     -fx-background-color: rgb(52, 240, 230);
