--- a/client/src/main/resources/styles.css
+++ b/client/src/main/resources/styles.css
@@ -8,8 +8,8 @@
   -fx-cursor: hand;
   -fx-text-fill: '#FFFFFF';
 }
-.button:active {
-  -fx-background-color: '#DCDADA';
+.button:pressed {
+  -fx-background-color: '#1D68CB';
 }
 .white-button {
   -fx-background-color: '#F1F1F1';
@@ -23,8 +23,8 @@
   -fx-cursor: hand;
   -fx-text-fill: '#FFFFFF';
 }
-.white-button:active {
-  -fx-background-color: '#DCDADA';
+.white-button:pressed {
+  -fx-background-color: '#1D68CB';
 }
 .toggle-button {
   -fx-background-color: '#F1F1F1';
@@ -38,8 +38,8 @@
   -fx-cursor: hand;
   -fx-text-fill: '#FFFFFF';
 }
-.toggle-button:active {
-  -fx-background-color: '#DCDADA';
+.toggle-button:pressed {
+  -fx-background-color: '#1D68CB';
 }
 .toggle-button:hover {
   -fx-background-color: '#F1F1F1';
@@ -49,6 +49,27 @@
   -fx-background-color: '#2483FF';
   -fx-cursor: hand;
   -fx-text-fill: '#FFFFFF';
+}
+.label-button {
+  -fx-background-color: '#F1F1F1';
+  -fx-transition: 600ms;
+  -fx-background-radius: 0;
+  -fx-background-color: '#FFFFFF';
+  -fx-padding: 10;
+  -fx-padding: 5;
+  -fx-border-width: 1;
+  -fx-border-color: '#F1F1F1';
+}
+.label-button:hover {
+  -fx-background-color: '#2483FF';
+  -fx-cursor: hand;
+  -fx-text-fill: '#FFFFFF';
+}
+.label-button:pressed {
+  -fx-background-color: '#1D68CB';
+}
+.label-button:active {
+  -fx-background-color: '#DCDADA';
 }
 .header {
   -fx-background-color: '#F1F1F1';
@@ -63,6 +84,9 @@
   -fx-padding: 5;
   -fx-border-width: 1;
   -fx-border-color: '#F1F1F1';
+}
+.white-label:active {
+  -fx-background-color: '#DCDADA';
 }
 .root {
   -fx-background-color: #34f0e6;
