--- a/client/src/main/resources/styles.css
+++ b/client/src/main/resources/styles.css
@@ -88,6 +88,11 @@
 .white-label:active {
   -fx-background-color: '#DCDADA';
 }
+.disabled-label {
+  -fx-background-color: '#FFFFFF';
+  -fx-padding: 10;
+  -fx-background-color: '#F1F1F1';
+}
 .root {
   -fx-background-color: #34f0e6;
 }
