Started revamping UI for reduced functionality

--- a/client/src/main/resources/components/button.less
+++ b/client/src/main/resources/components/button.less
@@ -38,3 +38,23 @@
     .white-button();
     .white-label();
 }
+
+#btn-agregar {
+    -fx-background-color: @blue;
+    -fx-text-fill: @white;
+    -fx-background-radius: 6px;
+    -fx-border-radius: 6px;
+    -fx-border-width: 0px;
+    -fx-border-color: @blue;
+    -fx-effect: dropshadow(gaussian, rgba(36,131,255,0.6), 6, 0, 0, 0);
+}
+
+#btn-cancelar {
+    -fx-background-color: @light-black;
+    -fx-text-fill: @white;
+    -fx-background-radius: 6px;
+    -fx-border-radius: 6px;
+    -fx-border-width: 0px;
+    -fx-border-color: @light-black;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 6, 0, 0, 0);
+}
