--- a/client/src/main/resources/global/colors.less
+++ b/client/src/main/resources/global/colors.less
@@ -1,6 +1,7 @@
 @white: '#FFFFFF';
 @grey: '#F1F1F1';
 @dark-grey: '#DCDADA';
+@light-black: '#848484';
 @blue: '#2483FF';
 @dark-blue: '#1D68CB';
 @black: '#000000';
