--- a/client/src/main/resources/styles.less
+++ b/client/src/main/resources/styles.less
@@ -1,8 +1,7 @@
 @import './components/button.less';
 @import './components/header.less';
 @import './components/label.less';
+@import './components/tab-pane.less';
+@import './components/inputs.less';
 
-.root {
-    -fx-background-color: rgb(52, 240, 230);
-}
 
