Estuve tanto tiempo q me olvide

--- a/client/src/main/resources/components/button.less
+++ b/client/src/main/resources/components/button.less
@@ -39,6 +39,23 @@
     .white-label();
 }
 
+.current-day {
+    .label-button();
+    -fx-background-color: @light-black;
+    -fx-text-fill: @white;
+}
+
+.current-day {
+    .label-button();
+    -fx-background-color: @light-black;
+    -fx-text-fill: @white;
+}
+
+.event-day {
+    .label-button();
+    -fx-text-fill: @blue;
+}
+
 #btn-agregar {
     -fx-background-color: @blue;
     -fx-text-fill: @white;
