--- a/client/src/main/resources/components/button.less
+++ b/client/src/main/resources/components/button.less
@@ -5,6 +5,7 @@
     -fx-background-color: @grey;
     -fx-transition: 600ms;
     -fx-background-radius: 0;
+    -fx-text-fill: @black;
     &:hover {
         -fx-background-color: @blue;
         -fx-cursor: hand;
@@ -37,12 +38,6 @@
 .label-button {
     .white-button();
     .white-label();
-}
-
-.current-day {
-    .label-button();
-    -fx-background-color: @light-black;
-    -fx-text-fill: @white;
 }
 
 .current-day {
